@@ -49,6 +49,7 @@ Changelog
  * Fix: Add a label to the modals’ “close” button for screen reader users (Helen Chapman, Katie Locke)
  * Fix: Ensure the 'add child page' button displays when focused (Helen Chapman, Katie Locke)
  * Fix: Remove tab order customisations in CMS admin (Jordan Bauer)
+ * Fix: Add labels to permission checkboxes for screen reader users (Helen Chapman, Katie Locke)
 
 
 2.5.1 (07.05.2019)
